src/main/java/pl/scisoftware/sample/bad/seqence/api/SerializableObject.java
package pl.scisoftware.sample.bad.seqence.api;

import java.io.Serializable;

public class SerializableObject implements Serializable {

	private static final long serialVersionUID = 955702208631124078L;

}
